--- a/index.html
+++ b/index.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Website</title>
+  <title>Akhil Chauhan</title>
+
+  <style>
+    body {
+      background-color: white;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      margin-top: 60px;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #333;
+      font-size: 18px;
+      font-weight: 500;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 80px auto;
+      text-align: left;
+      padding: 0 20px;
+    }
+
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Hello World 👋</h1>
-  <p>This is my first website on GitHub.</p>
+
+  <!-- TOP NAME -->
+  <header>
+    <h1>Akhil Chauhan</h1>
+
+    <!-- CLICKABLE MENU -->
+    <nav>
+      <a href="#about">About</a>
+      <a href="#research">Research</a>
+      <a href="#cv">CV</a>
+    </nav>
+  </header>
+
+  <!-- ABOUT SECTION -->
+  <section id="about">
+    <h2>About</h2>
+    <p>
+      Write a short introduction about yourself here.
+      This section can describe your background and interests.
+    </p>
+  </section>
+
+  <!-- RESEARCH SECTION -->
+  <section id="research">
+    <h2>Research</h2>
+    <p>
+      List your research interests, projects, or publications here.
+    </p>
+  </section>
+
+  <!-- CV SECTION -->
+  <section id="cv">
+    <h2>CV</h2>
+    <p>
+      You can upload your CV as a PDF and link it here.
+    </p>
+    <!-- Example -->
+    <!-- <a href="cv.pdf">Download CV</a> -->
+  </section>
+
 </body>
 </html>
