--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       color: #333;
       font-size: 18px;
       font-weight: 500;
+      cursor: pointer;
     }
 
     nav a:hover {
@@ -38,6 +39,11 @@
       margin: 80px auto;
       text-align: left;
       padding: 0 20px;
+      display: none; /* hidden by default */
+    }
+
+    section.active {
+      display: block; /* show only active section */
     }
 
     h2 {
@@ -45,6 +51,14 @@
       padding-bottom: 5px;
     }
   </style>
+
+  <script>
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll("section");
+      sections.forEach(section => section.classList.remove("active"));
+      document.getElementById(sectionId).classList.add("active");
+    }
+  </script>
 </head>
 
 <body>
@@ -55,14 +69,14 @@
 
     <!-- CLICKABLE MENU -->
     <nav>
-      <a href="#about">About</a>
-      <a href="#research">Research</a>
-      <a href="#cv">CV</a>
+      <a onclick="showSection('about')">About</a>
+      <a onclick="showSection('research')">Research</a>
+      <a onclick="showSection('cv')">CV</a>
     </nav>
   </header>
 
-  <!-- ABOUT SECTION -->
-  <section id="about">
+  <!-- ABOUT SECTION (VISIBLE BY DEFAULT) -->
+  <section id="about" class="active">
     <h2>About</h2>
     <p>
       Write a short introduction about yourself here.
