--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
   <section id="about" class="active">
     <h2>About</h2>
     <p>
-      Write a short introduction about yourself here.
+      I am trained as an Electrical Engineer and have previously worked at
+      Samsung Research and IBM Consulting, where my work focused on machine
+      learning and cloud computing applications.
+    </p>
+    <p>
+      I have completed a Master’s degree in Public Policy from IIT Delhi, with
+      a concentration in energy and climate policy and energy systems modeling.
+      I currently work with the Net Zero India Project, a research collaboration
+      between IIT Delhi, the Andlinger Center for Energy and the Environment at
+      Princeton University, and Prayas Energy Group.
+    </p>
+    <p>
+      My work involves developing energy system models, including the transport
+      sector model with projections up to 2076, using frameworks such as PIER
+      and MACRO, in collaboration with a multidisciplinary research team.
     </p>
   </section>
 
