--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <section id="about" class="active">
     <h2>About</h2>
     <p>
+      CURRENTLY UNDER DEVELOPMENT
       I am trained as an Electrical Engineer and have previously worked at
       Samsung Research and IBM Consulting, where my work focused on machine
       learning and cloud computing applications.
